tests/rascal/negative/parse_errors/L2/forloop.ob
MODULE Bla;

BEGIN
  FOR i = 0 TO 5 DO
    x := 1
  END
END Bla.